[gd_scene load_steps=6 format=3 uid="uid://cjy81hjbnc807"]

[ext_resource type="Script" uid="uid://844708bxsr00" path="res://Editors/EditorXML/Windows/Playanimation/window.gd" id="1_pwba2"]
[ext_resource type="Script" uid="uid://dgpinxpx3l7cu" path="res://Editors/EditorXML/Windows/Playanimation/Popup/creation.gd" id="2_ad7ch"]
[ext_resource type="Script" uid="uid://culj3b7b6vs7d" path="res://Class/Value/ObjetValue.gd" id="3_6nfh2"]
[ext_resource type="Script" uid="uid://d2p0t5i6b272p" path="res://Class/FlxAnimation.gd" id="4_ad7ch"]
[ext_resource type="Script" uid="uid://l7l1rctoc7xl" path="res://Editors/EditorXML/Windows/Playanimation/scripts_extra/ScaledFlxAnimation.gd" id="4_kh383"]

[node name="PlayAnimation" type="Window"]
auto_translate_mode = 1
title = "Play Animation"
initial_position = 1
size = Vector2i(512, 512)
always_on_top = true
script = ExtResource("1_pwba2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundColor" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
color = Color(0.176237, 0.176237, 0.176237, 1)
metadata/_edit_use_anchors_ = true

[node name="Container" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Config" type="Panel" parent="CanvasLayer/Container"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="CanvasLayer/Container/Config"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Creation" type="PopupMenu" parent="CanvasLayer/Container/Config/MenuBar"]
title = "Creation"
size = Vector2i(156, 100)
always_on_top = true
item_count = 1
item_0/text = "Create Animation"
item_0/id = 0
script = ExtResource("2_ad7ch")

[node name="RemoveAnimation" type="ConfirmationDialog" parent="CanvasLayer/Container/Config/MenuBar/Creation"]
position = Vector2i(0, 36)
size = Vector2i(400, 80)
always_on_top = true

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer/Container/Config/MenuBar/Creation/RemoveAnimation"]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Container/Config/MenuBar/Creation/RemoveAnimation/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.04
anchor_right = 0.96
anchor_bottom = 0.35
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/Container/Config/MenuBar/Creation/RemoveAnimation/CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Animation Prefix:"

[node name="Panel" type="Panel" parent="CanvasLayer/Container/Config/MenuBar/Creation/RemoveAnimation/CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_use_anchors_ = true

[node name="MenuButton" type="MenuButton" parent="CanvasLayer/Container/Config/MenuBar/Creation/RemoveAnimation/CanvasLayer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MenuButton" type="Node" parent="CanvasLayer/Container/Config/MenuBar/Creation/RemoveAnimation" node_paths=PackedStringArray("Value")]
script = ExtResource("3_6nfh2")
Value = NodePath("../CanvasLayer/HBoxContainer/Panel/MenuButton")
metadata/_custom_type_script = "uid://culj3b7b6vs7d"

[node name="Animation" type="PopupMenu" parent="CanvasLayer/Container/Config/MenuBar"]
auto_translate_mode = 1
title = "Animation"
size = Vector2i(156, 100)
always_on_top = true

[node name="Panel" type="Panel" parent="CanvasLayer/Container"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="CanvasLayer/Container/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Play" type="Button" parent="CanvasLayer/Container/Panel/Container"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Play"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Container/Panel/Container"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "24 FPS"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="CanvasLayer/Container/ScrollContainer" node_paths=PackedStringArray("FlxAnim")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_kh383")
FlxAnim = NodePath("FlxAnimation")

[node name="FlxAnimation" type="TextureRect" parent="CanvasLayer/Container/ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ad7ch")
custom_animation = false
metadata/_custom_type_script = "uid://d2p0t5i6b272p"

[node name="FlxAnimation" type="Node" parent="." node_paths=PackedStringArray("Value")]
script = ExtResource("3_6nfh2")
Value = NodePath("../CanvasLayer/Container/ScrollContainer/Control/FlxAnimation")
metadata/_custom_type_script = "uid://culj3b7b6vs7d"

[node name="AnimationOptions" type="Node" parent="." node_paths=PackedStringArray("Value")]
script = ExtResource("3_6nfh2")
Value = NodePath("../CanvasLayer/Container/Config/MenuBar/Animation")
metadata/_custom_type_script = "uid://culj3b7b6vs7d"

[node name="CreationOptions" type="Node" parent="." node_paths=PackedStringArray("Value")]
script = ExtResource("3_6nfh2")
Value = NodePath("../CanvasLayer/Container/Config/MenuBar/Creation")
metadata/_custom_type_script = "uid://culj3b7b6vs7d"

[node name="RemoveAnimation" type="Node" parent="."]

[node name="Prefix" type="Node" parent="RemoveAnimation" node_paths=PackedStringArray("Value")]
script = ExtResource("3_6nfh2")
Value = NodePath("../../CanvasLayer/Container/Config/MenuBar/Creation/RemoveAnimation/CanvasLayer/HBoxContainer/Panel/MenuButton")
metadata/_custom_type_script = "uid://culj3b7b6vs7d"

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="id_pressed" from="CanvasLayer/Container/Config/MenuBar/Creation" to="CanvasLayer/Container/Config/MenuBar/Creation" method="_id_pressed"]
[connection signal="confirmed" from="CanvasLayer/Container/Config/MenuBar/Creation/RemoveAnimation" to="." method="accept_remove_keyframes"]
[connection signal="pressed" from="CanvasLayer/Container/Panel/Container/Play" to="." method="_on_play_pressed"]
[connection signal="text_changed" from="CanvasLayer/Container/Panel/Container/LineEdit" to="." method="set_fps"]
